@@ -1,3 +1,8 @@
+2012-01-12  Pedro Alves  <palves@redhat.com>
+
+	* i386-tdep.c (i386_frame_cache_1): Also mark the frame base as
+	available when %ebp is found to be zero (outermost).
+
 2012-01-11  Andreas Tobler  <andreast@fgznet.ch>
 
 	* common/gdb_assert.h (gdb_static_assert): Rename static_assert to
